tests/lean/invalidEnd.lean
namespace Foo.Bar
section Baz
section

end Baz
end Bal
end Fool.Bar
end
